[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bsl-interpreter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.2",
]

[project.scripts]
bsl = "bsl.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/bsl"]
